Adjust grid gap fix height issue body and section

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
   margin: 25px auto;
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2%;
+  grid-gap: 20px;
   width: 90%;
 
 }
